@@ -5,8 +5,8 @@
 #else
 #define	USED
 #endif
-static const char sccsid[] USED = "@(#)/usr/ucb/pic.sl	5.7 (gritter) 2/8/06";
-const char version[] = "version July 5, 1993	5.7 (gritter) 2/8/06";
+static const char sccsid[] USED = "@(#)/usr/ucb/pic.sl	5.8 (gritter) 8/6/06";
+const char version[] = "version July 5, 1993	5.8 (gritter) 8/6/06";
 /* SLIST */
 /*
 arcgen.c:	Sccsid @(#)arcgen.c	1.3 (gritter) 10/18/05	
@@ -20,9 +20,9 @@ main.c:	Sccsid @(#)main.c	1.6 (gritter) 12/5/05
 misc.c:	Sccsid @(#)misc.c	1.3 (gritter) 10/18/05	
 movegen.c:	Sccsid @(#)movegen.c	1.2 (gritter) 10/18/05	
 pic.h:	Sccsid @(#)pic.h	1.6 (gritter) 12/5/05	
-picl.c:	Sccsid @(#)picl.l	1.7 (gritter) 11/27/05	
+picl.c:	Sccsid @(#)version.c	5.8 (gritter) 8/6/06	
 picl.c: * Sccsid @(#)ncform	1.4 (gritter) 11/18/05
-picl.l:	Sccsid @(#)picl.l	1.7 (gritter) 11/27/05	
+picl.l:	Sccsid @(#)picl.l	1.8 (gritter) 8/6/06	
 picy.c:	Sccsid @(#)picy.y	1.4 (gritter) 11/28/05	
 picy.c: * Sccsid @(#)yaccpar	1.5 (gritter) 11/26/05
 picy.y:	Sccsid @(#)picy.y	1.4 (gritter) 11/28/05	
